--- a/Calendar.html
+++ b/Calendar.html
@@ -123,11 +123,11 @@
         </div>
 
          <div class="col-md-4 show-5">
-            <img src="images/New Years Eve.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Austin's Rockin' New Years Show</h2>
-            <h3>December 31st, 2024</h3>
-            <h3>Red Door 8PM | Show 9PM</h3>
-            <h3>Tickets $25</h3>
+            <img src="images/Lybrand (1).png" style="width: 100%" alt="Responsive image">
+            <h2>Carter Lybrand</h2>
+            <h3>January 15th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/carter-lybrand-live-at-the-fiddle-bow-music-hall-tickets-1096700533819?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
         
