--- a/Contact.html
+++ b/Contact.html
@@ -109,21 +109,21 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
         <div class="col-sm-4 show-1">
-            <img src="images/Retro 78.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Retro 78</h2>
-            <h3>November 30th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/retro-78-tickets-1009221698267?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-sm-4 show-2">
             <img src="images/Martha Spencer 1.PNG" style="width: 100%" alt="Responsive image">
             <h2>Martha Spencer and The Wonderland Country Band</h2>
             <h3>December 7th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1009248538547?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+        <div class="col-sm-4 show-2">
+            <img src="images/NMW Mod.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Chirstmas Show with Nicole Marie Quinn & Special Guests</h2>
+            <h3>December 15th, 2024</h3>
+            <h3>Red Door 1PM | Show 2PM</h3>
+            <h3>Tickets $5</h3>
+            <a href="https://www.eventbrite.com/e/christmas-show-with-nicole-marie-quinn-tickets-1072701943389?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
