--- a/Calendar.html
+++ b/Calendar.html
@@ -142,12 +142,14 @@
       
     </div>
 
+    <div class="row content">
+
         <div class="col-md-4 show-7">
             <h2>Your Band Could Be Up Next!</h2>
             <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
         </div>
 
-</div>
+    </div>
 </div> <!-- Closes "Content Text-Left"-->
 
 <footer class="footer bg-black text-center text-lg-start text-white">
