--- a/Calendar.html
+++ b/Calendar.html
@@ -144,6 +144,15 @@
 
     <div class="row content">
 
+         <div class="col-md-4 show-6">
+            <img src="images/Stella Prince 051825.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Stella Prince</h2>
+            <h3>May 18th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/an-afternoon-with-stella-prince-tickets-1106814123839?aff=ebdssbdestsearch>Tickets</a>  
+        </div>
+        
         <div class="col-md-4 show-7">
             <h2>Your Band Could Be Up Next!</h2>
             <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
