--- a/Calendar.html
+++ b/Calendar.html
@@ -91,7 +91,7 @@
             <a href="https://www.eventbrite.com/e/austins-rockin-new-years-eve-show-hosted-by-austin-irby-tickets-1079210821619?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-         <div class="col-md-4 show-2">
+        <div class="col-md-4 show-2">
             <img src="images/Carter Lybrand JAN25.jpg" style="width: 100%" alt="Responsive image">
             <h2>Carter Lybrand</h2>
             <h3>January 16th, 2025</h3>
@@ -131,13 +131,13 @@
             <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1106779410009?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-         <div class="col-md-4 show-6">
+        <div class="col-md-4 show-6">
             <img src="images/Stella Prince 051825.jpg" style="width: 100%" alt="Responsive image">
             <h2>Stella Prince</h2>
             <h3>May 18th, 2025</h3>
             <h3>Red Door 2PM | Show 3PM</h3>
             <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/an-afternoon-with-stella-prince-tickets-1106814123839?aff=ebdssbdestsearch>Tickets</a> class="btn custom-btn" role="button">Tickets</a>  
+            <a href="https://www.eventbrite.com/e/an-afternoon-with-stella-prince-tickets-1106814123839?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
       
     </div>
